[package]
name = "mobot"
description = "A Telegram framework for Rust"
homepage = "https://github.com/0xfe/mobot"
repository = "https://github.com/0xfe/mobot"
readme = "README.md"
version = "0.3.10"
edition = "2021"
license = "MIT"

[lib]
name = "mobot"
path = "src/lib/lib.rs"

[dependencies]
argh = "0.1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
anyhow = "1"
thiserror = "1"
derive_more = "0.99"
futures = "0.3"
async-trait = "0.1.68"
chrono = "0.4.24"
regex = "1.8.2"
mobot-derive = { version = "0.1.0", path = "mobot-derive" }
bytes = "1.4.0"
